# fsu-fut-enhancer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  desktop-release.yml  release.yml  test.yml
apps/fsu-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/fsu-desktop/src-tauri/capabilities/: default.json
apps/fsu-desktop/src-tauri/src/: lib.rs  main.rs
apps/fsu-desktop/ui/: index.html
crates/ea-client/: Cargo.toml
crates/ea-client/src/: error.rs  lib.rs  player.rs  session.rs  utas.rs
crates/fsu-core/: Cargo.toml
crates/fsu-core/src/: lib.rs  price.rs  price_queue.rs  price_service.rs  rating_prices.rs  sbc_chemistry.rs  sbc_rating.rs
crates/fsu-types/: Cargo.toml
crates/fsu-types/src/: lib.rs  price.rs
crates/fsu-wasm/: Cargo.toml
crates/fsu-wasm/src/: lib.rs
extension/: README.md  eslint.config.mjs  manifest.json  package-lock.json  package.json
extension/data/: ea-bundle-baseline.json
extension/scripts/: build-userscript.cjs  build-userscript.js  build-wasm.cjs  ea-bundle-check.mjs  extract-css.mjs  extract-fast-sbc.js  extract-player-patches.js  extract-remaining.mjs  extract-sbc-squad-overview.mjs  extract-unassigned-patch.js  package-extension.cjs  prepare-legacy.js  slim-continue.mjs  slim-futweb.mjs  slim-hub-patches.mjs  slim-market-store.mjs  slim-sbc-hub.mjs  split-patches.mjs
extension/scripts/lib/: ea-bundle-check.mjs
extension/src/: background.js  content-bridge.js  page-runtime.js  userscript.js  userscript.source.js
extension/src/fsu/: index.js
extension/src/fsu/core/: AppContext.js  AppRuntime.js  BootstrapEvents.js  BootstrapPipeline.js  CachePruner.js  CallMaps.js  ControllerAccess.js  Debug.js  DomainHelpers.js  FsuContext.js  ModuleRegistry.js  PatchInstaller.js  PatchRegistry.js  PriceRequestQueue.js  SbcServices.js  StartupFacades.js  TtlCache.js
extension/src/fsu/data/: game-config.js  html-templates.js  localization.js
extension/src/fsu/domain/: AcademyCalcService.js  AutoBuyService.js  BuildPreferencesService.js  FastSbcPlannerService.js  FastSbcService.js  FgRatingService.js  Localization.js  MarketActionService.js  OneFillCriteriaService.js  PackService.js  PlayerLockService.js  PlayerSearchService.js  (+13 more)
extension/tests/: ea-bundle-check.test.mjs  fast-sbc-planner.test.mjs  fsu-context.test.mjs  load-background.cjs  localization.test.mjs  player-search.test.mjs  preferences-services.test.mjs  rating-prices.test.mjs  run-tests.mjs  sbc-chemistry.test.mjs  sbc-rating.test.mjs  sbc-services.test.mjs  wasm-core.test.mjs
scripts/: build-desktop.ps1  cargo-test.cmd  dev-desktop.ps1  test-all.ps1  test-rust.ps1
(+53 files in other folders)
