[package]
name = "fsu-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FSU domain logic (SBC chemistry, ratings, price batching)"

[features]
default = ["async"]
async = ["dep:futures", "dep:tokio", "tokio/rt-multi-thread", "tokio/macros", "tokio/sync"]

[dependencies]
fsu-types = { path = "../fsu-types" }
futures = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", optional = true, default-features = false, features = ["sync"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }