[package]
name = "fsu-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for FSU core logic (Chrome extension bridge)"

[lib]
crate-type = ["cdylib"]

[dependencies]
fsu-core = { path = "../fsu-core", default-features = false }
fsu-types = { path = "../fsu-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

