[package]
name = "fsu-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FSU FUT Enhancer standalone desktop app"
build = "build.rs"

[lib]
name = "fsu_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "fsu-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ea-client = { path = "../../../crates/ea-client" }
fsu-core = { path = "../../../crates/fsu-core" }
fsu-types = { path = "../../../crates/fsu-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"